# ai-dial-chat-completions

./: pyproject.toml
task/: app.py
task/clients/: client.py  custom_client.py
