[project]
name = "ai-dial-chat-completions"
version = "0.1.0"
description = "AI DIAL Chat Completions"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "aiohttp>=3.13.2",
    "aidial-client>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["task"]

